# cudara

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  index.html  models.json  pyproject.toml  swagger.yaml
.github/workflows/: ci.yml  docker-publish.yml
src/cudara/: __init__.py  cli.py  image_processing.py  main.py  quantization.py
tests/: conftest.py  test_api.py  test_cli.py  test_image_processing.py  test_integration.py  test_unit.py
