[project]
name = "cudara"
version = "0.0.1"
description = "Lightweight CUDA inference server with Ollama-compatible API"
readme = "README.md"
license = {text = "MIT"}
keywords = ["inference", "cuda", "llm", "vlm", "embeddings", "asr", "ollama", "huggingface"]
authors = [
    {name = "Julio Galindo" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
]
requires-python = ">=3.12"

dependencies = [
    "accelerate>=1.13.0",
    "autoawq>=0.2.9",
    "fastapi>=0.128.0",
    "huggingface-hub>=0.36.0",
    "pydantic>=2.12.3",
    "qwen-vl-utils>=0.0.14",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.51.0",
    "uvicorn>=0.38.0",
]

[project.urls]
Homepage = "https://github.com/juliog922/cudara"
Repository = "https://github.com/juliog922/cudara"
Documentation = "https://github.com/juliog922/cudara#readme"
Issues = "https://github.com/juliog922/cudara/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/models.json",
    "/swagger.yaml",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cudara"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.2.0",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu129" }]
torchaudio = [{ index = "pytorch-cu129" }]
torchvision = [{ index = "pytorch-cu129" }] # Added this to match torch/torchaudio mapping

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require running server)",
    "slow: Slow tests (model loading, inference)",
]

[tool.coverage.run]
source = ["src/cudara"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[project.scripts]
cudara = "cudara.main:app"

[tool.ruff.lint]
select = ["E", "F", "I", "D1"]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google" 

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"